.png support (#40)
* png support using Batik
* add system-specific approved .png

Co-authored-by: Ivan Ponomarev <iponomarev@mail.ru>